@@ -672,11 +672,12 @@ Ext.extend(GO.email.EmailComposer, GO.Window, {
 				item.setChecked(true);
 			}
 		}
-		
-		if(config.disableTemplates){
-			this.templatesBtn.setDisabled(config.disableTemplates);
-		} else {
-			this.templatesBtn.setDisabled(false);
+		if(GO.addressbook){
+			if(config.disableTemplates){
+				this.templatesBtn.setDisabled(config.disableTemplates);
+			} else {
+				this.templatesBtn.setDisabled(false);
+			}
 		}
 		
 	},
